@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -clex-3.17.ebuild,
+  +clex-3.18.ebuild:
+  Version bump, remove old, the online manual pages will be released later
+  hence remove 'doc' USE flag
+
   04 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> +metadata.xml,
   +clex-3.17.ebuild:
   New Ebuild for bug 41601. Thanks to swegener since the ebuild is based on
